<resources>
    <string name="app_name">Android Exercise</string>
    <string name="name">Name</string>
    <string name="add1">Address Line 1</string>
    <string name="add2">Address Line 2</string>
    <string name="landmark">Landmark</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pincode">Pincode</string>
    <string name="check_default">Make this my default address</string>
    <string name="demo_address">Harshit Singh\nHouse No. 12 B, Grand Aveneue, \nNoida, Uttar Pradesh, \n 201301</string>
    <string name="your_address">Your address book is blank</string>
    <string name="kindly_add_address">Kindly add shipping / billing\n address and enjoy faster\n checkout</string>
    <string name="add_line_2">Your Address Line 2</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="update_address_fail">Failed to Update the Address</string>
    <string name="update_address_success">Address updated Successfully</string>
    <string name="add_address_fail">Failed to add the Address</string>
    <string name="add_address_success">Address added Successfully</string>
    <string name="delete_address_fail">Failed to Delete Address</string>
    <string name="delete_address_success">Address has been successfully deleted</string>
    <string name="load_address_fail">Failed to load address</string>
    <string name="load_address_success">Addresses loaded successfully</string>
    <string name="proper_name">Enter a proper name</string>
    <string name="proper_address">Enter a proper address</string>
    <string name="proper_city">Enter a proper City</string>
    <string name="proper_state">Enter a proper State</string>
    <string name="proper_pincode">Enter a proper Pincode of six digits</string>
</resources>
